[gd_scene load_steps=13 format=3 uid="uid://by7j4iutullnw"]

[ext_resource type="Script" uid="uid://dk7jh1t0ksq5j" path="res://components/ui/dialogue_screen/dialogue_screen.gd" id="1_nfr8a"]
[ext_resource type="StyleBox" uid="uid://bud50rkm8v14f" path="res://assets/styles/horizontal_nine_patch.tres" id="2_xv0ki"]
[ext_resource type="FontFile" uid="uid://bdoxb52apalcc" path="res://assets/fonts/titan_one_regular.ttf" id="3_xv0ki"]
[ext_resource type="StyleBox" uid="uid://uribf4upf68k" path="res://assets/styles/box_nine_patch.tres" id="4_xv0ki"]
[ext_resource type="PackedScene" uid="uid://jylldslf8ft6" path="res://components/ui/typed_label/typed_label.tscn" id="5_xv0ki"]
[ext_resource type="FontFile" uid="uid://b4kbmu4ions3q" path="res://assets/fonts/concert_one.ttf" id="6_a5q2l"]
[ext_resource type="AudioStream" uid="uid://c1gcxpwupafrl" path="res://assets/sfx/chatter/chatter_1.wav" id="7_ea0my"]
[ext_resource type="AudioStream" uid="uid://bffli747sqp6h" path="res://assets/sfx/chatter/chatter_2.wav" id="8_g8lqi"]
[ext_resource type="AudioStream" uid="uid://cgnxxf8ntd5al" path="res://assets/sfx/chatter/chatter_3.wav" id="9_1ucc0"]
[ext_resource type="AudioStream" uid="uid://dwjo81s25d1h1" path="res://assets/sfx/chatter/chatter_4.wav" id="10_hbmsb"]

[sub_resource type="FontVariation" id="FontVariation_xv0ki"]
base_font = ExtResource("3_xv0ki")
spacing_glyph = 8

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ea0my"]
random_pitch = 1.2
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("7_ea0my")
stream_1/stream = ExtResource("8_g8lqi")
stream_2/stream = ExtResource("9_1ucc0")
stream_3/stream = ExtResource("10_hbmsb")

[node name="DialogueScreen" type="CanvasLayer"]
script = ExtResource("1_nfr8a")

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 30

[node name="DialogueContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = -70

[node name="TitleBoxContainer" type="PanelContainer" parent="MarginContainer/DialogueContainer"]
z_index = 1
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("2_xv0ki")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DialogueContainer/TitleBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = -8
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = -8

[node name="TitleLabel" type="Label" parent="MarginContainer/DialogueContainer/TitleBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_xv0ki")
theme_override_font_sizes/font_size = 60
text = "Title"
horizontal_alignment = 1
uppercase = true

[node name="TextBoxContainer" type="PanelContainer" parent="MarginContainer/DialogueContainer"]
custom_minimum_size = Vector2(1600, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("4_xv0ki")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/DialogueContainer/TextBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 50

[node name="DialogueLabel" parent="MarginContainer/DialogueContainer/TextBoxContainer/MarginContainer" instance=ExtResource("5_xv0ki")]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("6_a5q2l")
theme_override_font_sizes/font_size = 42
time_per_character = 30.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_ea0my")
volume_db = -25.0
bus = &"SFX"
